<resources>
    <string name="app_name">WaterMark Pro</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_subscribe">Subscribe</string>
    <string name="congratulations">Congratulations</string>
    <string name="owned_tip">Welcome to join our premium membership, we will continue to provide you with excellent service and product features. Thank you for joining.</string>
    <string name="join_now">Join Now</string>
    <string name="join_free">3 Days free trial</string>
    <string name="renew_tip_trial">3 days free trial,converts to %1$s subscription on %2$s,cost of %3$s,cancel by %4$s, no fee. Subscription is auto-renewable and can be canceled in Google Play at any time.</string>
    <string name="renew_tip_normal">%1$s subscription costs %2$s, subscription is auto-renewable, you can cancel anytime in Google Play.</string>
    <string name="vip_tip1">Unlimited photo processing</string>
    <string name="vip_tip2">More Premium features in the future</string>
    <string name="join_premium">Join Premium</string>
    <string name="settings">Settings</string>
    <string name="rate_us">Rate us</string>
    <string name="privacy_and_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="version">Version</string>
    <string name="popup_content_opt_mand_update">A new version is available please upgrade for better experience</string>
    <string name="popup_button_goto_store">Go to store</string>
    <string name="popup_content_req_mand_update">It is detected that your application version is lower and cannot be used. Please update to the latest version.</string>
    <string name="popup_content_no_update">Current version is the latest one</string>
    <string name="popup_button_ok">OK</string>
    <string name="rate_title">Thanks for giving us 5 stars!</string>
    <string name="rate_tip">Thanks for liking and supporting our app!</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="thanks_for_rating">Thanks for rating!</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_tip">Upload photos to start removing background</string>
    <string name="sub_page_opt_daily">Daily</string>
    <string name="sub_page_ts_weekly">Weekly</string>
    <string name="sub_page_opt_monthly">Monthly</string>
    <string name="sub_page_opt_yearly">Yearly</string>
    <string name="unlock_premium">Unlock Premium</string>
    <string name="confirm">Confirm</string>
    <string name="reselect_image">Reselect Image</string>
    <string name="start">Start</string>
    <string name="task_failed_please_retry">Task failed, please retry</string>
    <string name="result_tip">Unlimited photo processing \nMore Premium features in the future</string>
    <string name="loading">Loading...</string>
    <string name="loading_tip1">AI is Processing</string>
    <string name="loading_tip2">Analyzing your photos</string>
    <string name="loading_tip3">Please wait.</string>
    <string name="save_failed">save failed</string>
    <string name="save_success">save success</string>
    <string name="no_photos">No Files</string>
    <string name="watermark">Watermark</string>
    <string name="please_enter_content">Please enter content</string>
    <string name="add">Add</string>
    <string name="weather">Weather</string>
    <string name="map">Map</string>
    <string name="address">Address</string>
    <string name="altitude">Altitude</string>
    <string name="gps">GPS</string>
    <string name="compass">Compass</string>
    <string name="date_amp_time"><![CDATA[Date&Time]]></string>
    <string name="tag">Tag</string>
    <string name="text">Text</string>
    <string name="input_tag_name">Input tag name</string>
    <string name="done">Done</string>
    <string name="format">Format</string>
    <string name="display_off">Display off</string>
    <string name="format2">hh:mm:ss dd/mm/yyyy</string>
    <string name="format3">dd-mm-yyyy hh:mm:ss</string>
    <string name="format4">yyyy-mm-dd hh:mm:ss</string>
    <string name="format5">hh:mm:ss Mth d, yyyy</string>
    <string name="format6">Mth d, yyyy hh:mm:ss</string>
    <string name="notice">Notice</string>
    <string name="delete_tag">Are you sure to delete the tag?</string>
    <string name="delete_picture">Are you sure to delete it?</string>
    <string name="delete">Delete</string>
    <string name="small">Small</string>
    <string name="large">Large</string>
    <string name="image">Image</string>
    <string name="select">Select</string>
    <string name="logo">Logo</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="storage_path">Storage path</string>
    <string name="save_photo_prefix">Save Photo prefix</string>
    <string name="save_video_prefix">Save Video prefix</string>
    <string name="input_prefix">input prefix</string>
    <string name="get_premium">Get Premium</string>
    <string name="photo_size">Photo size</string>
    <string name="video_size">Video size</string>
    <string name="watermark_settings">Watermark settings</string>
    <string name="got_it">Got it</string>
    <string name="pro">Pro</string>
</resources>