<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:padding="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notice"
        android:textColor="@color/text_black"
        android:textSize="18sp"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:text="@string/notice" />

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:layout_constraintEnd_toStartOf="@+id/btn_ok"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/text_black"
        android:textSize="14sp"
        app:fontFamily="sans-serif-medium" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_ok"
        android:layout_width="0dp"
        android:layout_height="44dp"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="12dp"
        android:autoSizeMinTextSize="8sp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/button_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/done"
        android:textAllCaps="true"
        android:textColor="@color/text_black"
        android:textSize="14sp"
        app:fontFamily="sans-serif-medium" />

</androidx.constraintlayout.widget.ConstraintLayout>