<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/light"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:adjustViewBounds="true"
            android:padding="12dp"
            android:src="@mipmap/ic_flash_off"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/resolutionLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/tag"
            app:layout_constraintStart_toEndOf="@+id/light">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/pictureSizeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:popupBackground="@drawable/bg_spinner"
                android:spinnerMode="dropdown"
                android:visibility="visible"
                tools:visibility="gone" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/videoSizeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:popupBackground="@drawable/bg_spinner"
                android:spinnerMode="dropdown"
                android:visibility="gone"
                tools:visibility="visible" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/flashLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="gone">

            <ImageView
                android:id="@+id/light_auto"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:adjustViewBounds="true"
                android:padding="12dp"
                android:src="@mipmap/ic_flash_auto" />

            <ImageView
                android:id="@+id/light_on"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:padding="12dp"
                android:src="@mipmap/ic_flash_on" />

            <ImageView
                android:id="@+id/light_off"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:padding="12dp"
                android:src="@mipmap/ic_flash_off" />
        </LinearLayout>

        <TextView
            android:id="@+id/videoDuration"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/text_black"
            android:textSize="17sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="00:00:00"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/tag"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="3dp"
            android:adjustViewBounds="true"
            android:padding="12dp"
            android:src="@mipmap/ic_tag"
            app:tint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/middle_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintDimensionRatio="9:16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topPanel">

        <com.otaliastudios.cameraview.CameraView
            android:id="@+id/camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:keepScreenOn="true"
            app:cameraAudio="on"
            app:cameraAutoFocusMarker="@string/cameraview_default_autofocus_marker"
            app:cameraEngine="camera2"
            app:cameraPlaySounds="false"
            tools:layout_height="300dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rootWatermark"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_drawOnPreview="true"
                app:layout_drawOnVideoSnapshot="true">

                <LinearLayout
                    android:id="@+id/watermarkLayout"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/watermark_bg"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        tools:text="12:00 2024-06-26" />

                    <LinearLayout
                        android:id="@+id/weatherLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/weatherImage"
                            android:layout_width="14dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="7dp"
                            android:scaleType="center" />

                        <TextView
                            android:id="@+id/weather"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            tools:text="32°" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:drawablePadding="7dp"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-medium"
                        android:maxLines="2"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:drawableStartCompat="@mipmap/ic_prefix_address"
                        tools:text="北京市" />

                    <TextView
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:drawablePadding="7dp"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:drawableStartCompat="@mipmap/ic_prefix_location"
                        tools:text="39.977577,119.588986" />

                    <TextView
                        android:id="@+id/altitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:drawablePadding="7dp"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:drawableStartCompat="@mipmap/ic_prefix_altitude"
                        tools:text="Altitude:588.6m" />

                    <TextView
                        android:id="@+id/text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:drawablePadding="7dp"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-medium"
                        android:maxLines="2"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:drawableStartCompat="@mipmap/ic_prefix_text"
                        tools:text="" />

                    <com.nex3z.flowlayout.FlowLayout
                        android:id="@+id/chipLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:visibility="gone"
                        app:flChildSpacing="5dp"
                        app:flChildSpacingForLastRow="align"
                        app:flMaxRows="2"
                        app:flRowSpacing="5dp" />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/northLayout"
                    android:layout_width="68dp"
                    android:layout_height="68dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/northBg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@mipmap/ic_north_bg" />

                    <ImageView
                        android:id="@+id/north"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerInParent="true"
                        android:src="@mipmap/ic_north" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/imageWatermark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:adjustViewBounds="true"
                    android:alpha="0.5"
                    android:maxHeight="128dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@mipmap/ic_thumb" />

                <FrameLayout
                    android:id="@+id/mapLayout"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@color/black_1a"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <ImageView
                        android:id="@+id/mapImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone" />
                </FrameLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.otaliastudios.cameraview.CameraView>
    </RelativeLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/middle_layout">


        <ImageView
            android:id="@+id/takePicture"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/ic_take_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/thumb"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:src="@mipmap/ic_thumb"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/takePicture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/turn"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:src="@mipmap/ic_turn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/takePicture"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/modeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        app:layout_constraintTop_toBottomOf="@+id/bottomPanel">

        <TextView
            android:id="@+id/captureMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="5dp"
            android:paddingTop="3dp"
            android:paddingEnd="5dp"
            android:paddingBottom="3dp"
            android:text="@string/photo"
            android:textColor="@color/text_black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/photoDot"
            android:layout_width="4dp"
            android:layout_height="4dp"
            android:background="@drawable/dot_main"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/captureMode"
            app:layout_constraintStart_toStartOf="@+id/captureMode"
            app:layout_constraintTop_toBottomOf="@+id/captureMode"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/proMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:paddingStart="5dp"
            android:paddingTop="3dp"
            android:paddingEnd="5dp"
            android:paddingBottom="3dp"
            android:text="@string/pro"
            android:textColor="@color/main"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/captureMode"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/videoMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:alpha="0.5"
            android:paddingStart="5dp"
            android:paddingTop="3dp"
            android:paddingEnd="5dp"
            android:paddingBottom="3dp"
            android:text="@string/video"
            android:textColor="@color/text_black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/captureMode"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/videoDot"
            android:layout_width="4dp"
            android:layout_height="4dp"
            android:background="@drawable/dot_main"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/videoMode"
            app:layout_constraintStart_toStartOf="@+id/videoMode"
            app:layout_constraintTop_toBottomOf="@+id/videoMode"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>